ops/level1/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: hello-scaleway
  name: hello-scaleway-lb
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: hello-scaleway
  type: LoadBalancer
status:
  loadBalancer: {}
