ops/level1/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: hello-scaleway
  name: hello-scaleway-nodeport
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: hello-scaleway
  type: NodePort
status:
  loadBalancer: {}
