ops/level1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    external-dns.alpha.kubernetes.io/hostname: hello.ops.breakathon.dev
    external-dns.alpha.kubernetes.io/ttl: "60"
    kubernetes.io/tls-acme: 'true'
    ingress.kubernetes.io/force-ssl-redirect: 'true'
spec:
  rules:
  - host: hello.ops.breakathon.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-scaleway
            port:
              number: 80
  tls:
    - hosts:
        - hello.ops.breakathon.dev
      secretName: hello-ops-tls
